content/terraform-plugin-framework/v0.14.x/docs/plugin/framework/accessing-values.mdx
---
page_title: 'Plugin Development - Framework: Access State, Config, and Plan'
description: |-
  How to read values from state, config, and plan in the Terraform provider
  development framework.
# START AUTO GENERATED METADATA, DO NOT EDIT
created_at: 2025-03-06T10:49:53-05:00
last_modified: 2025-03-06T10:49:53-05:00
# END AUTO GENERATED METADATA
---

# Accessing State, Config, and Plan

-> Note: The Plugin Framework is in beta.

There are various points at which the provider needs access to the data from
the practitioner's configuration, Terraform's state, or generated plan.
The same patterns are used for accessing this data, regardless of
its source.

The data is usually stored in a request object:

```go
func (r ThingResource) Create(ctx context.Context,
	req resource.CreateRequest, resp *resource.CreateResponse)
```

In this example, `req` holds the configuration and plan, and there is no state
value because the resource does not yet exist in state.

## Get the Entire Configuration, Plan, or State

One way to interact with configuration, plan, and state values is to convert
the entire configuration, plan, or state into a Go type, then treat them as
regular Go values. This has the benefit of letting the compiler check all your
code that accesses values, but requires defining a type to contain the values.

Use the `Get` method to retrieve the first level of configuration, plan, and state data.

```go
type ThingResourceModel struct {
	Address    types.Object `tfsdk:"address"`
	Age        types.Int64  `tfsdk:"age"`
	Name       types.String `tfsdk:"name"`
	Pets       types.List   `tfsdk:"pets"`
	Registered types.Bool   `tfsdk:"registered"`
	Tags       types.Map    `tfsdk:"tags"`
}

func (r ThingResource) Create(ctx context.Context,
	req resource.CreateRequest, resp *resource.CreateResponse) {
	var plan ThingResourceModel

	diags := req.Plan.Get(ctx, &plan)

	resp.Diagnostics.Append(diags...)

	if resp.Diagnostics.HasError() {
		return
	}

	// values can now be accessed like plan.Name.Value
	// check if things are null with plan.Name.IsNull()
	// check if things are unknown with plan.Name.IsUnknown()
}
```

The configuration, plan, and state data is represented as an object, and
accessed like an object. Refer to the [conversion rules](#conversion-rules) for an
explanation on how objects can be converted into Go types.

To descend into deeper nested data structures, the `types.List`, `types.Map`, and `types.Set` types each have an `ElementsAs()` method. The `types.Object` type has an `As()` method.

## Get a Single Attribute's Value

Use the `GetAttribute` method to retrieve a single attribute value from the configuration, plan, and state.

```go
func (r ThingResource) Read(ctx context.Context,
	req resource.ReadRequest, resp *resource.ReadResponse) {
	var name types.String

	diags := req.State.GetAttribute(ctx, path.Root("name"), &name)

	resp.Diagnostics.Append(diags...)

	if resp.Diagnostics.HasError() {
		return
	}

	// ...
}
```

## When Can a Value Be Unknown or Null?

A lot of conversion rules say an error will be returned if a value is unknown
or null. It is safe to assume:

* Required attributes will never be null or unknown in Create, Read, Update, or
  Delete methods.
* Optional attributes that are not computed will never be unknown in Create,
  Read, Update, or Delete methods.
* Computed attributes, whether optional or not, will never be null in the plan
  for Create, Read, Update, or Delete methods.
* Computed attributes that are read-only (`Optional` is not `true`) will always
  be unknown in the plan for Create, Read, Update, or Delete methods. They will
  always be null in the configuration for Create, Read, Update, and Delete
  methods.
* Required attributes will never be null in a provider's Configure method. They
  may be unknown.
* The state never contains unknown values.
* The configuration for Create, Read, Update, and Delete methods never contains
  unknown values.

In any other circumstances, the provider is responsible for handling the
possibility that an unknown or null value may be presented to it.

## Conversion Rules

!> **Warning:** It can be tempting to use Go types instead of `attr.Value`
implementations when the provider doesn't care about the distinction between an
empty value, unknown, and null. But if Terraform has a null or unknown value
and the provider asks the framework to store it in a type that can't hold it,
`Get` will return an error. Make sure the types you are using can hold the
values they might contain!

### String

Strings can be automatically converted to Go's `string` type (or any aliases of
it, like `type MyString string`) as long as the string value is not null or
unknown.

### Number

Numbers can be automatically converted to the following numeric types (or any
aliases of them, like `type MyNumber int`) as long as the number value is not
null or unknown:

* `int`, `int8`, `int16`, `int32`, `int64`
* `uint`, `uint8`, `uint16`, `uint32`, `uint64`
* `float32`, `float64`
* [`*big.Int`](https://pkg.go.dev/math/big#Int), [`*big.Float`](https://pkg.go.dev/math/big#Float)

An error will be returned if the value of the number cannot be stored in the numeric type supplied because of an overflow or other loss of precision.

### Boolean

Booleans can be automatically converted to Go's `bool` type (or any aliases of
it, like `type MyBoolean bool`) as long as the boolean value is not null or
unknown.

### List

Lists can be automatically converted to any Go slice type (or alias of a Go
slice type, like `type MyList []string`), with the elements either being
`attr.Value` implementations or being converted according to these rules. Go
slice types are considered capable of handling null values; the slice will be
set to nil. The `Get` method will still return an error for unknown list
values.

### Map

Maps can be automatically converted to any Go map type with string keys (or any
alias of a Go map type with string keys, like `type MyMap map[string]int`),
with the elements either being `attr.Value` implementations or being converted
according to these rules. Go map types are considered capable of handling null
values; the map will be set to nil. The `Get` method will still return an error
for unknown map values.

### Object

Objects can be automatically converted to any Go struct type with that follows these constraints:

* Every property on the struct must have a `tfsdk` struct tag.
* The `tfsdk` struct tag must name an attribute in the object that it is being
  mapped to or be set to `-` to explicitly declare it does not map to an
  attribute in the object.
* Every attribute in the object must have a corresponding struct tag.

These rules help prevent typos and human error from unwittingly discarding
information by failing as early, consistently, and loudly as possible.

Properties can either be `attr.Value` implementations or will be converted
according to these rules.

Unknown and null objects cannot be represented as structs and will return an
error. Their attributes may contain unknown or null values if the attribute's
type can hold them.

### Pointers

Pointers behave exactly like the type they are referencing, except they can hold
null values. A pointer will be set to `nil` when representing a null value;
otherwise, the conversion rules for that type will apply.

### Detected Interfaces

`Get` detects and utilizes the following interfaces, if the target implements
them.

#### ValueConverter

If a value is being set on a Go type that implements the [`tftypes.ValueConverter`
interface](https://pkg.go.dev/github.com/hashicorp/terraform-plugin-go/tftypes#ValueConverter),
that interface will be delegated to to handle the conversion.

#### Unknownable

If the value is being set on a Go type that fills the `Unknownable` interface:

```go
type Unknownable interface {
	SetUnknown(context.Context, bool) error
	SetValue(context.Context, interface{}) error
	GetUnknown(context.Context) bool
	GetValue(context.Context) interface{}
}
```

It will be considered capable of handling unknown values, and those methods
will be used to populate it and retrieve its value. The `interface{}` being
passed and retrieved will be of a type that can be passed to
[`tftypes.NewValue`](https://pkg.go.dev/github.com/hashicorp/terraform-plugin-go/tftypes#NewValue).

#### Nullable

If the value is being set on a Go type that fills the `Nullable` interface:

```go
type Nullable interface {
	SetNull(context.Context, bool) error
	SetValue(context.Context, interface{}) error
	GetNull(context.Context) bool
	GetValue(context.Context) interface{}
}
```

It will be considered capable of handling null values, and those methods will
be used to populate it and retrieve its value. The `interface{}` being passed
and retrieved will be of a type that can be passed to
[`tftypes.NewValue`](https://pkg.go.dev/github.com/hashicorp/terraform-plugin-go/tftypes#NewValue).
